# sync-hub

./: .dockerignore  .env.example  .env.staging.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPANEL_DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  LICENSE.md  LICENSING.md  README.md  SECURITY.md  SYSTEM_FLOWS.md  package-lock.json
worker/: AGENTS.md  pyproject.toml
worker/src/: realtime_extractor.py
worker/src/cv_intelligence_worker/: __init__.py  artifacts.py  chunking.py  cli.py  config.py  discovery.py  draft_ingestion.py  draft_validation.py  embeddings.py  extraction.py  extraction_constants.py  gcs_originals.py  gcs_storage.py  llm.py  llm_models.py  manatal.py  normalization.py  normalization_constants.py  parsing.py  pipeline.py  public_applications.py  realtime_extractor.py  schema.py  store.py  supabase.py  supabase_client.py  supabase_helpers.py  utils.py
worker/src/cv_intelligence_worker/artifacts/: __init__.py  generator.py  keys.py  store.py
worker/src/cv_intelligence_worker/candidate_extraction/: __init__.py  inputs.py  (+5 more)
worker/tests/: __init__.py  test_artifacts.py  test_candidate_experience.py  test_candidate_locations.py  test_candidate_roles.py  test_candidate_skills.py  test_chunking_embeddings.py  test_cli.py  test_config.py  test_db_state_machine.py  test_draft_extraction_e2e.py  test_draft_ingestion.py  test_draft_ingestion_e2e.py  test_draft_validation.py  test_extraction.py  test_full_e2e.py  test_gcs_originals.py  test_llm.py  test_manatal.py  test_normalization.py  test_output_comparison.py  test_parsing.py  test_pipeline.py  test_prompt_templates.py  test_public_applications.py  test_realtime_e2e.py  test_realtime_extractor.py  test_runtime_smoke.py  test_skill_cleanup_classifier.py  test_supabase_batching.py  test_supabase_candidate_drafts.py  test_supabase_capacity.py  test_supabase_client.py  test_supabase_manatal_repository.py  test_supabase_public_applications.py  test_supabase_query_filters.py  test_supabase_responses.py  test_supabase_storage.py  test_supabase_transport.py  test_workflow_qa.py
worker/tests/test_helpers/: cv_generator.py  profiles.py  realtime.py
(+588 files in other folders)
