[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-intelligence-worker"
version = "0.1.0"
description = "Offline ingestion worker for the CV Intelligence Platform"
requires-python = ">=3.9"
readme = { text = "Offline ingestion worker for the CV Intelligence Platform.", content-type = "text/markdown" }
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "httpx",
    "openai>=2.0,<3.0",
    "pydantic>=2.9,<3.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.10",
    "pip-audit>=2.7.3",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "python-docx>=1.1.2",
    "reportlab>=4.2.0",
    "ruff>=0.8.0",
]

[project.scripts]
cv-intelligence-worker = "cv_intelligence_worker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cv_intelligence_worker = [
    "candidate_extraction/prompts/*.yaml",
    "prompts/*.yaml",
]

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["cv_intelligence_worker"]

[tool.coverage.report]
fail_under = 65
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 140
target-version = "py39"

[tool.ruff.lint]
select = ["B", "E9", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
